# Colorify

./: CMakeLists.txt  README.md
pictures/: x.txt
shaders/: frag.frag  vertex.vert
src/: Cli.cc  Cli.hh  Color.cc  Color.hh  Program.cc  Program.hh  Shader.cc  Shader.hh  Texture.cc  Texture.hh  main.cc
